--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "jquery": "1",
     "jquery.maskedinput": "^1.4.1",
     "jquery-ui": "^1.12.1",
-    "jquery-tokeninput": "^1.7.0",
+    "jquery.tagsinput": "^1.3.6",
     "jQuery-UI-Dialog-extended": "https://github.com/jasonday/jQuery-UI-Dialog-extended.git"
   }
 }
