--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "jquery.maskedinput": "^1.4.1",
     "jquery-ui": "^1.12.1",
     "jquery.tagsinput": "^1.3.6",
-    "jQuery-UI-Dialog-extended": "https://github.com/jasonday/jQuery-UI-Dialog-extended.git"
+    "jQuery-UI-Dialog-extended": "https://github.com/jasonday/jQuery-UI-Dialog-extended.git",
+    "font-awesome": "fontawesome#^4.7.0"
   }
 }
